Fixing footer on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1119,12 +1119,17 @@ margin on the iframe, cause it breaks stuff. */
     background: #e5e573;
 }
 
-.site-footer .tentacle-thing {
-    overflow:auto;
-    min-height:200px;
-    max-height:444px;
+.overflowed {
+    overflow: hidden;
+}
+
+.site-footer .tentacle-thing:before {
+    content:'';
+    width:788px;
+    height:471px;
     background: transparent url(/assets/blog-footer.gif) 0 bottom no-repeat;
-    position:relative;
+    position:absolute;
+    bottom:0;
     left:-130px;
 }
 
@@ -1275,10 +1280,6 @@ margin on the iframe, cause it breaks stuff. */
 
     .site-footer .inner {
         width:800px;
-    }
-
-    .site-footer .info {
-        margin-left:160px;
     }
 
     .navigation {
@@ -1492,10 +1493,6 @@ margin on the iframe, cause it breaks stuff. */
     .site-footer .inner {
         width:650px;
         margin:0;
-    }
-
-    .site-footer .info {
-        margin-left:150px;
     }
 
 }
